2010-09-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-int.el (gnus-check-server): Say what the error was when opening
	failed.

	* nnimap.el (nnimap-wait-for-response): Search further when we're not
	using streaming.

2010-09-25  Julien Danjou  <julien@danjou.info>

	* gnus-html.el (gnus-html-rescale-image): Use our defalias
	gnus-window-inside-pixel-edges.

2010-09-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-srvr.el (gnus-server-copy-server): Add documentation.

	* mm-decode.el (mm-save-part): Allow saving to other directories the
	normal Emacs way.

	* nndoc.el (nndoc-type-alist): Move mime-parts after mbox.  Suggested
	by Jay Berkenbilt.

	* gnus-art.el (gnus-mime-delete-part): Fix plural for "byte" when
	there isn't a single byte.

	* gnus-int.el (gnus-open-server): Don't query whether to go offline --
	just do it.  It doesn't really seem to matter what the user responds
	here, I think, so it's just a confusing question.

	* nnimap.el (nnimap-retrieve-group-data-early): Fix typo in the
	non-streaming case.

	* gnus-art.el (gnus-flush-original-article-buffer): Separated out.
	(gnus-article-encrypt-body): Use it.

	* gnus-sum.el (gnus-summary-show-complete-article): New command and
	keystroke.

	* nnimap.el (nnimap-find-wanted-parts-1): Use
	gnus-fetch-partial-articles.

	* gnus-art.el (gnus-fetch-partial-articles): New variable.

	* nnimap.el (nnimap-insert-partial-structure): New function.
	(nnimap-get-partial-article): New function.
	(nnimap-request-article): Use it.
	(nnimap-wait-for-response): Return whether the wait was successful.
	(nnimap-finish-retrieve-group-infos): Don't do anything if the
	retrieval wasn't successful.
	(nnimap-retrieve-group-data-early): Allow throttling servers.
	(nnimap-streaming): New variable.
	(nnimap-fetch-partial-articles): Removed.

	* mm-decode.el (mm-with-part): Protect against killed buffers.

	* nndraft.el (nndraft-retrieve-headers): Insert Lines and Chars headers
	for prettier summary display.
